2005-04-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* po/lilypond.pot, ...: Update using bison-CVS.

	* python/lilylib.py (make_ps_images): Fixo.

2005-04-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/lilylib.py (make_ps_images): typo.

	* configure.in (gui_b): make bison optional.

	* lily/GNUmakefile (OUT_DIST_FILES): dist parser and lexer.

2005-04-16  Bernard Hurley  <bernard@fong-hurley.org.uk>

	* framework-eps.scm: code added so that a macro \betweenLilyPondSystem
	with one parameter can be defined in a LaTeX file when processed
	by lilypond-book this will be evaluated between the systems of
	a muti-system score. The parameter is the number of systems processed.

2005-04-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/lilylib.py (make_ps_images): Escape newline.

	* Documentation/user/music-glossary.tely: Run
	texinfo-all-menus-update.

2005-04-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily-library.scm (old-relative-not-used-message)
	(version-not-seen-message): Add input-file-name-location to message.

	* lily/parser.yy (lilypond): Add token aliases.

	* Documentation/user/music-glossary.tely (accidental): Fixes.  Do
	not confuse with alteration.
	(alteration): Add.

2005-04-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/lilylib.py (make_ps_images): use -dEPSCrop

	* VERSION (PACKAGE_NAME): release 2.5.19 

	* Documentation/user/lilypond-book.itely (Invoking lilypond-book):
	only put xrefs in info documentation.

	* make/ly-rules.make ($(outdir)/%.html.omf): transplant .dvi ->
	.pdf rule to tex-rules.make.

	* scm/framework-eps.scm (dump-stencils-as-EPSes): remove comments
	from -systems.* output.

	* stepmake/stepmake/tex-rules.make ($(outdir)/%.pdf): make PDF
	directly, remove -$(PAGESIZE) target.

	* input/test/embedded-postscript.ly: update.

2005-04-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lysdoc-targets.make (local-WWW): remove ps.gz target.

	* Documentation/user/changing-defaults.itely (Font selection):