@@ -54,7 +54,7 @@ STEPMAKE_GUILE_DEVEL(REQUIRED, 1.6.5)
 STEPMAKE_MAKEINFO(REQUIRED)
 STEPMAKE_PYTHON_DEVEL(REQUIRED)
 
-STEPMAKE_PATH_PROG(GHOSTSCRIPT, gs,  OPTIONAL, 8.15)  
+STEPMAKE_PATH_PROG(GHOSTSCRIPT, gs, OPTIONAL, 8.14)
 
 STEPMAKE_PROGS(MFTRACE, mftrace, REQUIRED, 1.1.1)
 STEPMAKE_PATH_PROG(FONTFORGE, fontforge, REQUIRED, 20041208)
@@ -69,14 +69,17 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS([fopencookie funopen gettext isinf memmem snprintf vsnprintf])
 AC_CHECK_HEADERS([utf8/wchar.h], LIBS="$LIBS -lutf8")
 
-
+STEPMAKE_PROGS(PKG_CONFIG, pkg-config, REQUIRED, 0.9.0)
 if test "$gui_b" = "yes"; then
-    STEPMAKE_GTK2
+    STEPMAKE_GTK2(gtk+-2.0, REQUIRED, 2.4.0)
+else
+    STEPMAKE_GTK2(gtk+-2.0, OPTIONAL, 2.4.0)
 fi
 
-STEPMAKE_FREETYPE2
-STEPMAKE_PANGO_FT2
-STEPMAKE_FONTCONFIG
+STEPMAKE_FREETYPE2(freetype2, REQUIRED, 0)
+#STEPMAKE_PANGO(pango, REQUIRED, 1.6.0)
+STEPMAKE_PANGO_FT2(pangoft2, REQUIRED, 1.6.0)
+STEPMAKE_FONTCONFIG(fontconfig, OPTIONAL, 2.2.0)
 
 ## TTFTOOL stuff
 AC_C_BIGENDIAN(TTFTOOL_ENDIAN="-DBIGENDIAN",
@@ -89,8 +92,6 @@ AC_SUBST(TTFTOOL_ENDIAN)
 STEPMAKE_GUILE(OPTIONAL)
 # perl for help2man.
 STEPMAKE_PERL(OPTIONAL)
-
-
 
 # New makeinfo for multi-page website docs Simply always require new
 # makeinfo should avoid bug reports; if people want to build lily
