@@ -8,12 +8,12 @@ case $1 in
 esac
 
 if [ ! -f aclocal.m4 -o stepmake/aclocal.m4 -nt aclocal.m4 ]; then
-    echo "stepmake/aclocal.m4 is newer. Copying file." 
+    echo "stepmake/aclocal.m4 is newer.  Copying file." 
     cp -f stepmake/aclocal.m4 aclocal.m4
 fi
 
 if [ ! -f autogen.sh -o stepmake/autogen.sh -nt autogen.sh ]; then
-    echo "stepmake/autogen.sh is newer. Copying file." 
+    echo "stepmake/autogen.sh is newer.  Copying file." 
     cp -f stepmake/autogen.sh autogen.sh
     exec ./autogen.sh "$@"
 fi
